# SurviveAmongZombies

./: .clang-tidy  .cmake-format.yaml  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yaml
assets/projectiles/ASEs/: big blue.aseprite  big green.aseprite  big red.aseprite  medium blue.aseprite  medium green.aseprite  medium red.aseprite  small blue.aseprite  small green.aseprite  small red.aseprite
assets/static/: atlas.json
assets/units/: atlas.json
scripts/: format-cmake.sh  format-code.sh  format-shell.sh
scripts/ci/: build.sh  cmake-check.sh  code-format-check.sh  leaks.sh  lint.sh  shellcheck.sh  tests.sh  tests_coverage.sh
src/: CMakeLists.txt  config.h  dyn_objs.c  dyn_objs.h  game.c  game.h  main.c  simulate.c  state.h  static_objs.c  static_objs.h
src/sprite_manager/: sprite_manager.c  sprite_manager.h
src/state/: simulate.c  state.h
src/ui_manager/: ui_manager.c  ui_manager.h
src/units/: crystal.c  enemy.c  exp_crystal.c  player.c  projectile.c  units.h  utils.c
src/utils/: utils.c
tests/: CMakeLists.txt  test.c
